--- a/sites/filminhos_legais.html
+++ b/sites/filminhos_legais.html
@@ -3,32 +3,28 @@
 	<head>
 	<title>filminhos_legais</title>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	</head>
-	
 	<body>
-		<nav class="navbar navbar-inverse">
-			<div class="conteiner-fluid">
-				<div class="navbar-header">
-					<a class="nav-brand" href="#" style="color:white;">Filminhos Legais</h3>
+		<nav>
+			<div>
+				<div>
+					<a href="#"><h2>Filminhos Legais</h2></a>
 				</div>
-					<ul class="nav navbar-nav">
+					<ul>
 						<li><a href="#">Lançamentos</a></li>
-						<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Categorias<span class="caret"></span></a>
-							<ul class="dropdown-menu">
-								<li><a href="#">Ação</a></li>
-								<li><a href="#">Animação</a></li>
-								<li><a href="#">Aventura</a></li>
-								<li><a href="#">Comedia</a></li>
-								<li><a href="#">Drama</a></li>
-								<li><a href="#">Epico</a></li>
-								<li><a href="#">Terror</a></li>
-								<li><a href="#">Suspense</a></li>
-							</ul>
-						</li>
-					</ul>
+						<li><a href="#">Categorias<span class="caret"></span></a>
+						<ul>
+							<li><a href="#">Ação</a></li>
+							<li><a href="#">Animação</a></li>
+							<li><a href="#">Aventura</a></li>
+							<li><a href="#">Comedia</a></li>
+							<li><a href="#">Drama</a></li>
+							<li><a href="#">Epico</a></li>
+							<li><a href="#">Terror</a></li>
+							<li><a href="#">Suspense</a></li>
+						</ul>
+					</li>
+				</ul>
 			</div>
 		</nav>
 	</body>
